Initial commit with content.

--- a/course/Gemfile
+++ b/course/Gemfile
@@ -16,6 +16,7 @@ gem 'coffee-rails', '~> 4.0.0'
 
 # Use jquery as the JavaScript library
 gem 'jquery-rails'
+gem 'jquery-turbolinks'
 # Turbolinks makes following links in your web application faster. Read more: https://github.com/rails/turbolinks
 gem 'turbolinks'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
@@ -38,3 +39,11 @@ gem 'spring',        group: :development
 # Use debugger
 # gem 'debugger', group: [:development, :test]
 
+gem 'haml'
+gem 'haml-rails'
+gem 'rails-latex'
+gem 'bootstrap-sass'
+gem 'rails_bootstrap_navbar'
+gem 'font-awesome-rails'
+gem 'autoprefixer-rails'
+gem 'simple_form', '~> 3.1.0.rc1'
